New Crowdin updates (#646)
* New translations: learn.xml (Ukrainian)

* New translations: puzzle.xml (Ukrainian)

* New translations: puzzleTheme.xml (Ukrainian)

* New translations: learn.xml (Korean)

* New translations: learn.xml (Russian)

* New translations: site.xml (Vietnamese)

* New translations: puzzleTheme.xml (English)

* New translations: faq.xml (French)

* New translations: faq.xml (Spanish)

* New translations: class.xml (Catalan)

* New translations: class.xml (Czech)

* New translations: faq.xml (Russian)

* New translations: class.xml (Turkish)

* New translations: emails.xml (Turkish)

* New translations: lag.xml (Turkish)

* New translations: class.xml (Chinese Traditional)

* New translations: coach.xml (Chinese Traditional)

* New translations: activity.xml (Thai)

* New translations: activity.xml (Hindi)

* New translations: contact.xml (Hindi)

* New translations: lag.xml (Hindi)

--- a/translation/dest/class/ca-ES.xml
+++ b/translation/dest/class/ca-ES.xml
@@ -39,7 +39,7 @@ Nom d\'usuari: %2$s
 Contrasenya: %3$s</string>
 	<string name="inviteALishogiAccount">Convida un compte de Lishogi</string>
 	<string name="inviteDesc1">Si l\'estudiant ja té un compte de Lishogi, pots convidar-lo a la classe.</string>
-	<string name="inviteDesc2">Rebran un missatge a Lichess amb un enllaç per a unir-se a la classe.</string>
+	<string name="inviteDesc2">Rebran un missatge a Lishogi amb un enllaç per a unir-se a la classe.</string>
 	<string name="inviteDesc3">Important: convida només a estudiants que coneguis, i que vulguin unir-se a la classe.</string>
 	<string name="inviteDesc4">Mai enviïs invitacions a jugadors que no les hagin demanat.</string>
 	<string name="createANewLishogiAccount">Crea un nou compte a Lishogi</string>
