--- a/translation/dest/class/tr-TR.xml
+++ b/translation/dest/class/tr-TR.xml
@@ -23,7 +23,7 @@
 	<string name="classDescription">Sınıf açıklaması</string>
 	<string name="visibleByBothStudentsAndTeachers">Hem antrenörler hem de sınıfın öğrencileri tarafından görülebilir</string>
 	<string name="teachersOfTheClass">Sınıf antrenörleri</string>
-	<string name="addLishogiUsernames">Oyuncuların Lichess kullanıcı adlarını ekleyerek onları antrenör olarak davet edin. Her satırda bir isim olmalı.</string>
+	<string name="addLishogiUsernames">Oyuncuların Lishogi kullanıcı adlarını ekleyerek onları antrenör olarak davet edin. Her satırda bir isim olmalı.</string>
 	<string name="theyMustFirstApply">Lishogi Antrenörü olmak için önce başvuruda bulunmalılar.</string>
 	<string name="resetPassword">Şifreyi sıfırla</string>
 	<string name="makeSureToCopy">Parolayı kopyaladığınızdan veya bir yere yazdığınızdan emin olun. Bir daha parolayı göremeyeceksiniz!</string>
