--- a/translation/dest/learn/ko-KR.xml
+++ b/translation/dest/learn/ko-KR.xml
@@ -196,7 +196,7 @@ Take the most valuable piece.</string>
 	<string name="whatNext">더 나아가기</string>
 	<string name="youKnowHowToPlayShogi">You know how to play shogi, congratulations! Do you want to become a stronger player?</string>
 	<string name="register">회원가입</string>
-	<string name="getAFreeLishogiAccount">무료로 쇼기 계정을 만들어보세요</string>
+	<string name="getAFreeLishogiAccount">무료로 Lishogi 계정을 만들어보세요</string>
 	<string name="practice">연습</string>
 	<string name="learnCommonShogiPositions">Learn common shogi positions</string>
 	<string name="puzzles">퍼즐</string>
