--- a/translation/dest/puzzle/uk-UA.xml
+++ b/translation/dest/puzzle/uk-UA.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="puzzles">Puzzles</string>
-  <string name="puzzleThemes">Puzzle themes</string>
+  <string name="puzzleThemes">Теми задач</string>
   <string name="recommended">Recommended</string>
   <string name="phases">Phases</string>
   <string name="motifs">Motifs</string>
@@ -52,7 +52,7 @@
   <string name="example">Example</string>
   <string name="addAnotherTheme">Add another theme</string>
   <string name="jumpToNextPuzzleImmediately">Jump to next puzzle immediately</string>
-  <string name="puzzleDashboard">Puzzle dashboard</string>
+  <string name="puzzleDashboard">Панель задач</string>
   <string name="improvementAreas">Improvement areas</string>
   <string name="strengths">Strengths</string>
   <string name="history">Puzzle history</string>
