--- a/translation/dest/activity/th-TH.xml
+++ b/translation/dest/activity/th-TH.xml
@@ -3,7 +3,7 @@
   <string name="activity">กิจกรรม</string>
   <string name="hostedALiveStream">ได้เป็นเจ้าภาพสตรีมสด</string>
   <plurals name="supportedNbMonths" comment="supportedNbMonths [one] [other]&#10;&#10;Supported lishogi.org for 4 months as a Patron. The second one always says &quot;Patron&quot; but it's actually a link.">
-    <item quantity="other">สนับสนุน lichess.org เป็นเวลา %1$s เดือน โดยเป็น %2$s</item>
+    <item quantity="other">สนับสนุน lishogi.org เป็นเวลา %1$s เดือน โดยเป็น %2$s</item>
   </plurals>
   <plurals name="practicedNbPositions">
     <item quantity="other">ได้ฝึกหัด %1$s ตำแหน่ง ใน %2$s</item>
