--- a/translation/dest/site/vi-VN.xml
+++ b/translation/dest/site/vi-VN.xml
@@ -101,7 +101,7 @@
 	<string name="xOpeningExplorer">Sách khai cuộc %s</string>
 	<string name="allSet">Đã xong!</string>
 	<string name="importKif">Import KIF</string>
-	<string name="importCsa">Nhập PGN</string>
+	<string name="importCsa">Nhập CSA</string>
 	<string name="delete">Xóa</string>
 	<string name="deleteThisImportedGame">Bạn muốn xóa ván đấu đã được nhập?</string>
 	<string name="replayMode">Chế độ xem lại</string>
@@ -327,8 +327,8 @@
 	<string name="save">Lưu</string>
 	<string name="leaderboard">Bảng dẫn đầu</string>
 	<string name="selectHandicap">Lựa chọn chấp quân</string>
-	<string name="pasteTheSfenStringHere">Dán chuỗi FEN ở đây</string>
-	<string name="pasteTheKifCsaStringHere">Dán chuỗi FEN ở đây</string>
+	<string name="pasteTheSfenStringHere">Dán chuỗi SFEN ở đây</string>
+	<string name="pasteTheKifCsaStringHere">Dán văn bản KIF hoặc CSA vào đây</string>
 	<string name="fromPosition">Từ thế trận</string>
 	<string name="default" comment="Default starting position as opposed to custom starting position">Default</string>
 	<string name="continueFromHere">Tiếp tục từ đây</string>
@@ -750,7 +750,7 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="shogiResources">Tài nguyên về Shogi</string>
 	<string name="coaches">Huấn luyện viên</string>
 	<string name="invalidNotation">Ký hiệu bên trong bàn cờ</string>
-	<string name="invalidSfen">Invalid SFEN</string>
+	<string name="invalidSfen">SFEN không hợp lệ</string>
 	<string name="error.minLength">Độ dài tối thiểu là %s</string>
 	<string name="error.maxLength">Độ dài tối đa là %s</string>
 	<string name="error.min">Phải lớn hơn hoặc bằng %s</string>
