--- a/translation/dest/tourname/kaa-UZ.xml
+++ b/translation/dest/tourname/kaa-UZ.xml
@@ -28,5 +28,11 @@
   <string name="monthlyClassical">Aylıq Klassikalıq</string>
   <string name="monthlyXArena">Aylıq %s Arena</string>
   <string name="monthlyX">Aylıq %s</string>
+  <string name="yearlyRapidArena">Jıllıq Rapid Arena</string>
+  <string name="yearlyRapid">Jıllıq Rapid</string>
+  <string name="yearlyClassicalArena">Jıllıq Klassikalıq Arena</string>
+  <string name="yearlyClassical">Jıllıq Klassikalıq</string>
+  <string name="yearlyXArena">Jıllıq %s Arena</string>
+  <string name="yearlyX">Jıllıq %s</string>
   <string name="xArena">%s Arena</string>
 </resources>
